--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ipl-player-details-web-scrapping",
+  "name": "github-web-scrapping",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "pdfkit": "^0.13.0"
+    "cheerio": "^1.0.0-rc.10",
+    "pdfkit": "^0.13.0",
+    "request": "^2.88.2"
   }
 }
